--- a/API/templates/Html/Second.html
+++ b/API/templates/Html/Second.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>Ingredient Form</title>
-  <link rel="stylesheet" type="text/css" href="../Css/Second.css">
+  <link rel="stylesheet" type="text/css" href="/static/Css/Second.css">
 </head>
 <body>
-  <img src="../Images/p1.png" alt="Ingredient Image">
+  <img src="/static/Images/p1.png" alt="Ingredient Image">
   <h1 id="sentence">Let us help you decide what delicious dish to prepare today</h1>
-  <form id="ingredientForm">
+  <form id="ingredientForm" method="POST">
     <h1 class="title">Ingredients</h1>
     <div class="container">
       <div>
@@ -81,29 +81,29 @@
     <div class="container container1">
       <div>
         <label>
-          <input type="checkbox" name="tools[]" value="Pan" class="box">
+          <input type="checkbox" name="tool" value="Pan" class="box">
           Pan
         </label>
         <br>
         <label>
-          <input type="checkbox" name="tools[]" value="Pot" class="box">
+          <input type="checkbox" name="tool" value="Pot" class="box">
           Pot
         </label>
         <br>
         <label>
-          <input type="checkbox" name="tools[]" value="Grater" class="box">
+          <input type="checkbox" name="tool" value="Grater" class="box">
           Grater
         </label>
         <br>
       </div>
       <div>
         <label>
-          <input type="checkbox" name="tools[]" value="CuttingBoard" class="box">
-          Cutting Board
+          <input type="checkbox" name="tool" value="Oven" class="box">
+          Oven
         </label>
         <br>
         <label>
-          <input type="checkbox" name="tools[]" value="Mixer">
+          <input type="checkbox" name="tool" value="Mixer">
           Mixer
         </label>
         <br>
@@ -113,64 +113,6 @@
       <input type="submit" value="Result" id="submit">
     </div>
   </form>
-  <script>
-    // Get form element
-    const form = document.getElementById('ingredientForm');
 
-    // Add event listener for form submission
-    form.addEventListener('submit', handleSubmit);
-
-    // Handle form submission
-    function handleSubmit(e) {
-      e.preventDefault();
-
-      // Get selected ingredients
-      const selectedIngredients = Array.from(document.querySelectorAll('input[name="ingredient"]:checked'))
-        .map(checkbox => checkbox.value);
-
-      // Get ingredient quantities
-      const quantities = Array.from(document.querySelectorAll('input[name="Quantity"]'))
-        .map(input => input.value);
-
-      // Get selected tools
-      const selectedTools = Array.from(document.querySelectorAll('input[name="tools[]"]:checked'))
-        .map(checkbox => checkbox.value);
-
-     
-// Perform validation
-let isValid = true;
-
-if (selectedIngredients.length === 0) {
-  isValid = false;
-  alert('Please choose at least one ingredient.');
-} else {
-  // Check if a quantity is provided for each selected ingredient
-  selectedIngredients.forEach((ingredient) => {
-    const ingredientIndex = selectedIngredients.indexOf(ingredient);
-    const quantity = quantities[ingredientIndex].trim();
-    if (quantity === '') {
-      isValid = false;
-      alert(`Please provide a quantity for ${ingredient}.`);
-    }
-  });
-}
-
-if (selectedTools.length === 0) {
-  isValid = false;
-  alert('Please choose at least one tool.');
-}
-
-if (isValid) {
-  // Output the selected ingredients, quantities, and tools
-  console.log('Selected Ingredients:', selectedIngredients);
-  console.log('Quantities:', quantities);
-  console.log('Selected Tools:', selectedTools);
-
-  // You can perform further actions here, such as making an API request or updating the UI.
-}
-}
-    
-
-  </script>
 </body>
 </html>
