--- a/Interface/Css/Result2.css
+++ b/Interface/Css/Result2.css
@@ -1,5 +1,5 @@
 :root {
-    background-image: url('/Interface/Images/studio-background-concept-abstract-empty-light-gradient-purple-studio-room-background-product-plain-studio-background.jpg');
+    background-image: url('../Images/studio-background-concept-abstract-empty-light-gradient-purple-studio-room-background-product-plain-studio-background.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: 'Bubbles';
-    src: url('/Interface/Fonts/FuzzyBubbles-Regular.ttf') ;
+    src: url('../Fonts/FuzzyBubbles-Regular.ttf') ;
   }
 
 
