--- a/Interface/Css/MainPage.css
+++ b/Interface/Css/MainPage.css
@@ -1,5 +1,5 @@
 :root {
-    background-image: url('/Interface/Images/studio-background-concept-abstract-empty-light-gradient-purple-studio-room-background-product-plain-studio-background.jpg');
+    background-image: url('../Images/studio-background-concept-abstract-empty-light-gradient-purple-studio-room-background-product-plain-studio-background.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
