--- a/Interface/Css/MainPage.css
+++ b/Interface/Css/MainPage.css
@@ -31,7 +31,7 @@
     position: absolute;
     right: 450px;
     top: 200px;
-    background-image: url('Yusuf-Belkhiri/Kitchen-Expert-System/Interface/Images/0.png');
+    background-image: url('../Images/0.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
